# libpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.py
.github/workflows/: ubuntu-ci.yml
cmake/: libppConfig.cmake.in
include/libpp/core/: dimension.hpp  edge.hpp  error_types.hpp  frontier.hpp  node.hpp  path_planner_base.hpp  search_space.hpp
include/libpp/details/: node.hpp  path_planner_base.hpp  search_space.hpp
include/libpp/planners/search/: bfs.hpp  dfs.hpp
scripts/: setup-conan-with-venv.sh
src/core/: dimension.cpp  node.cpp
src/details/: node.cpp
src/planners/search/: bfs.cpp
tests/: CMakeLists.txt  test_bfs.cpp  test_search_space.cpp
tests/unit/: utest_dimension.cpp  utest_frontier.cpp  utest_node.cpp  utest_search_space.cpp
